2001-09-20 (Thomas Huth):
  * Added screen flipping in fullscreen mode (-> more speed!).
  * ST-Med/ST-Low mixed mode now works (e.g. in the Magnetic
    Scrolls adventures).

2001-09-09 (Sven de Marothy):
  * Added hard-drive emulation, (option -e or --harddrive)
  * Fixed annoying key clicks during boot.
	
2001-08-16 (Thomas Huth):  *** Version 0.10a ***
  * Improved CPU cycles emulation. Most instructions now return the
    right cycles, I hope.
  * Added Spec512 support.

2001-07-21 (Thomas Huth):
  * Added some shortcuts
  * Added the possibility to switch between fullscreen and window mode.
  * Started working on better CPU cycles emulation (well, they are
    a real mess!).

2001-07-11:
  * Added ST Medium resolution.

2001-07-10:
  * Added Sven's debugger patch.

2001-06-26:
  * Added Sven de Marothy's screenshot patch. It allows taking screenshots
    by pressing ALTGR-G.

2001-06-10 (Thomas Huth):
  * Added sound support. Does not yet work perfect, but at least there
    are some noises now :-) (Use option --sound to enable it).

2001-06-01 (Thomas Huth):  *** Version 0.05a ***
  * Added joystick emulation.
  * Added Stefan's patch for ST-LOW res on big-endian machines,
    his patch for also leaving Hatari by pressing F12, and
    his fullscreen patch.
  * Changed all tabulator characters in the source to spaces.

2001-05-27 (Thomas Huth):  *** Version 0.04a ***
  * Added Stefan Berndtsson's patch for big-endian machines.
    Hatari now runs also with non-x86 Linux machines! Thanks Stefan!
  * Rewrote the ST-LOW resolution conversation routines in C
    => ST-LOW now works!
  * Added some of the WinSTon patches Paul Bates recently published
    at the WinSTon BBS (Thanks to Ladislav Adamec for the hint).
  * Cleaned up the source tree a little bit.

2001-04-03 (Thomas Huth):  *** Version 0.03a ***
  * Rewrote some more assembler functions. FDC emulation now works!

2001-04-02 (Thomas Huth):